# comserde

./: .gitignore  pyproject.toml  readme.md
comserde/: __init__.py  composite.py  decoder.py  decoding.py  decorator.py  entry.py  error.py  loads.py  primitive.py  types.py  vlq.py
comserde/test/: __init__.py
