[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "comserde"
version = "0.2.0"

description = "Library for serializing data structures into compact binary data"
readme = "readme.md"
license = { text = "EUPL-1.2" }
requires-python = ">=3.11"

[project.urls]
repository = "https://github.com/slietar/comserde"

[tool.setuptools.packages.find]
include = ["comserde"]
